--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
         <title>Govio</title>
         
+        <style>{% include "scss/main.css" %}</style>
         <!-- Temporary, change the mails to redirect to the /admin page -->
         <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
