--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,14 +5,19 @@
   <meta charset="utf-8">
         <title>Govio</title>
         
-        <style>{% include "scss/main.css" %}</style>
-        <!-- Temporary, change the mails to redirect to the /admin page -->
+        <style>{% include "base.css" %}</style>
         <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
 
     <body>
-        <h1>Govio: The website</h1>
         {{ content | safe}}
+
+        <div class="tiles">
+            <div class="tile tile-wildgroei"><a href="/pages/wildgroei">wildgroei</a></div>
+            <div class="tile tile-govio"><a href="/pages/govio">govio</a></div>
+            <div class="tile tile-kroe"><a href="/pages/kroe">kroe</a></div>
+        </div>
+        
         <script>
         if (window.netlifyIdentity) {
             window.netlifyIdentity.on("init", user => {
