--- a/index.njk
+++ b/index.njk
@@ -2,3 +2,9 @@
 layout: layouts/base.njk
 permalink: /
 ---
+
+<div class="tiles">
+    <div class="tile tile-wildgroei"><a href="/pages/wildgroei">wildgroei</a></div>
+    <div class="tile tile-govio"><a href="/pages/govio">govio</a></div>
+    <div class="tile tile-kroe"><a href="/pages/kroe">kroe</a></div>
+</div>
