--- a/index.njk
+++ b/index.njk
@@ -1,10 +1,6 @@
 ---
-layout: layouts/base.njk
+layout: layouts/page.njk
 permalink: /
 ---
 
-<div class="tiles">
-    <div class="tile tile-wildgroei"><a href="/pages/wildgroei">wildgroei</a></div>
-    <div class="tile tile-govio"><a href="/pages/govio">govio</a></div>
-    <div class="tile tile-kroe"><a href="/pages/kroe">kroe</a></div>
-</div>
+<h1>The title of the page</h1>
