add header basics. add logo's

--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,7 +3,21 @@ layout: layouts/base.njk
 ---
 
 <header>
-    a header
+    <a href="#top">
+        <img id="header-icon" class="header-icon" src="images/logo/logo-small.png" alt="Logo" />
+    </a>
+    <div id="hamburger" class="hamburger">
+        <div class="hamburger-line line-1"></div>
+        <div class="hamburger-line line-2"></div>
+        <div class="hamburger-line line-3"></div>
+    </div>
+    <nav id="navigation">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="active" href="./index.html">Home</a>
+            </li>
+        </ul>
+    </nav>
 </header>
 
 <main>
